[metadata]
name=ocoen_aws-token-manager
version=0.1.0
description=Utility for managing AWS STS tokens
long_description=file: README.md
license=MIT
url=https://github.com/orthanc/ocoen_aws-token-manaer
author=Ed Costello
author_email=ocoen@orthanc.co.nz

[options]
packages=find:
package_dir=
    =src
include_package_data=True
zip_safe=True
install_requires=
    ocoen_filesecrets
    boto3

[options.packages.find]
where=src

[options.entry_points]
console_scripts=
    aws-token-manager=ocoen.aws_token_manager:main
